metrics/kubernetes/coreweave-demo/loki.yaml

apiVersion: v1
kind: Service
metadata:
  name: metrics-loki
  namespace: tenant-tensorworks-demo
  labels:
    app.kubernetes.io/name: metrics-loki
spec:
  ports:
    - name: loki-port
      protocol: TCP
      port: 3100
      targetPort: 3100
  selector:
    app.kubernetes.io/name: metrics-loki

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-loki
  namespace: tenant-tensorworks-demo
  labels:
    app.kubernetes.io/name: metrics-loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metrics-loki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metrics-loki
    spec:
      volumes:
        - name: metrics-loki-config
          configMap:
            name: metrics-loki
            items:
              - key: loki-config.yaml
                path: local-config.yaml
      containers:
        - name: metrics-loki
          image: grafana/loki:latest
          volumeMounts:
            - name: metrics-loki-config
              mountPath: /etc/loki/
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.coreweave.cloud/cpu
                    operator: In
                    values:
                      - amd-epyc-milan
                  - key: topology.kubernetes.io/region
                    operator: In
                    values:
                      - LGA1
                  - key: kubernetes.io/os
                    operator: In
                    values:
                      - linux
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
